--- a/P8105_hw3_xw2757.Rmd
+++ b/P8105_hw3_xw2757.Rmd
@@ -107,17 +107,32 @@ data("brfss_smart2010")
 brfss_clean <- 
   brfss_smart2010 %>% 
   janitor::clean_names() %>% 
-  filter(topic == "Overall Health", response == c("Poor", "Fair", "Good", "Very good", "Excellent")) %>% 
+  filter(topic == "Overall Health",
+         response %in% c("Poor", "Fair", "Good", "Very good", "Excellent")) %>% 
   mutate(response = forcats::fct_relevel(response, c("Poor", "Fair", "Good", "Very good", "Excellent")))
 ```
 **In 2002, which states were observed at 7 or more locations? What about in 2010?**
 
 ```{r}
 brfss_clean %>% 
-  group_by(locationabbr, locationdesc) %>% 
-  summarize(n_locations = n()) %>% 
-  filter(n_locations >= 7)
+  filter(year == "2002") %>% 
+  group_by(locationabbr) %>% 
+  summarize(n_locations = n_distinct(locationdesc)) %>% 
+  filter(n_locations >= 7) %>% 
+  knitr::kable()
+
+brfss_clean %>% 
+  filter(year == "2010") %>% 
+  group_by(locationabbr) %>% 
+  summarize(n_locations = n_distinct(locationdesc)) %>% 
+  filter(n_locations >= 7) %>% 
+  knitr::kable()
 ```
+In 2002, 
+  
+
+  
+  and PA were observed at 7 or more locations, in 2010, 
 
 Construct a dataset that is limited to Excellent responses, and contains, year, state, and a variable that averages the data_value across locations within a state. Make a “spaghetti” plot of this average value over time within a state (that is, make a plot showing a line for each state across years – the geom_line geometry and group aesthetic will help).
 Make a two-panel plot showing, for the years 2006, and 2010, distribution of data_value for responses (“Poor” to “Excellent”) among locations in NY State.
