--- a/P8105_hw3_xw2757.md
+++ b/P8105_hw3_xw2757.md
@@ -169,11 +169,11 @@ aisles sensibly, and organize your plot so others can read it.**
 ``` r
 instacart %>% 
   group_by(aisle) %>% 
-  filter(n()>10000) %>% 
+  filter(n() > 10000) %>% 
   summarize(n_items = n()) %>%
   ggplot(aes(x = aisle, y = n_items)) +
-  geom_bar(stat = "identity") + coord_flip()+ 
-  theme(axis.text.y = element_text(size = 6, hjust = 1, vjust=0.5))
+  geom_bar(stat = "identity") + coord_flip() + 
+  theme(axis.text.y = element_text(size = 6, hjust = 1, vjust = 0.5))
 ```
 
 <img src="P8105_hw3_xw2757_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
@@ -185,7 +185,7 @@ table.**
 
 ``` r
 instacart %>% 
-  filter(aisle == c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% 
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% 
   group_by(aisle, product_name) %>% 
   summarize(n_buy=n()) %>% 
   filter(rank(desc(n_buy))<=3) %>% 
@@ -194,17 +194,17 @@ instacart %>%
 
     ## `summarise()` has grouped output by 'aisle'. You can override using the `.groups` argument.
 
-| aisle                      | product\_name                                   | n\_buy |
-|:---------------------------|:------------------------------------------------|-------:|
-| baking ingredients         | Light Brown Sugar                               |    157 |
-| baking ingredients         | Organic Vanilla Extract                         |    122 |
-| baking ingredients         | Pure Baking Soda                                |    140 |
-| dog food care              | Organix Chicken & Brown Rice Recipe             |     13 |
-| dog food care              | Organix Grain Free Chicken & Vegetable Dog Food |     14 |
-| dog food care              | Original Dry Dog                                |      9 |
-| packaged vegetables fruits | Organic Baby Spinach                            |   3324 |
-| packaged vegetables fruits | Organic Blueberries                             |   1692 |
-| packaged vegetables fruits | Organic Raspberries                             |   1920 |
+| aisle                      | product\_name                                 | n\_buy |
+|:---------------------------|:----------------------------------------------|-------:|
+| baking ingredients         | Cane Sugar                                    |    336 |
+| baking ingredients         | Light Brown Sugar                             |    499 |
+| baking ingredients         | Pure Baking Soda                              |    387 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |     28 |
+| dog food care              | Small Dog Biscuits                            |     26 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |     30 |
+| packaged vegetables fruits | Organic Baby Spinach                          |   9784 |
+| packaged vegetables fruits | Organic Blueberries                           |   4966 |
+| packaged vegetables fruits | Organic Raspberries                           |   5546 |
 
 The most popular item in the baking ingredients aisle are light brown
 sugar, organic vanilla extract, and pure baking soda. The most popular
@@ -222,7 +222,7 @@ this table for human readers (i.e. produce a 2 x 7 table).**
 instacart %>% 
   mutate(t_day_number = order_dow + 1) %>% 
   mutate(order_dow  = lubridate::wday(t_day_number, label = TRUE)) %>% 
-  filter(product_name == c("Pink Lady Apples", "Coffee Ice Cream")) %>% 
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>% 
   group_by(product_name, order_dow) %>% 
   summarize(mean_hr = mean(order_hour_of_day)) %>% 
   pivot_wider(
@@ -230,17 +230,14 @@ instacart %>%
     values_from = mean_hr)
 ```
 
-    ## Warning in product_name == c("Pink Lady Apples", "Coffee Ice Cream"): longer
-    ## object length is not a multiple of shorter object length
-
     ## `summarise()` has grouped output by 'product_name'. You can override using the `.groups` argument.
 
     ## # A tibble: 2 × 8
     ## # Groups:   product_name [2]
     ##   product_name       Sun   Mon   Tue   Wed   Thu   Fri   Sat
     ##   <chr>            <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>
-    ## 1 Coffee Ice Cream  13.2  15    15.3  15.4  15.2  10.3  12.4
-    ## 2 Pink Lady Apples  12.2  11.7  12    13.9  11.9  13.9  11.6
+    ## 1 Coffee Ice Cream  13.8  14.3  15.4  15.3  15.2  12.3  13.8
+    ## 2 Pink Lady Apples  13.4  11.4  11.7  14.2  11.6  12.8  11.9
 
 Table above shows the mean hour of the day at which Pink Lady Apples and
 Coffee Ice Cream are ordered on each day of the week.
@@ -271,54 +268,219 @@ brfss_clean %>%
   filter(year == "2002") %>% 
   group_by(locationabbr) %>% 
   summarize(n_locations = n_distinct(locationdesc)) %>% 
-  filter(n_locations >= 7)
+  filter(n_locations >= 7) %>% 
+  knitr::kable()
 ```
 
-    ## # A tibble: 6 × 2
-    ##   locationabbr n_locations
-    ##   <chr>              <int>
-    ## 1 CT                     7
-    ## 2 FL                     7
-    ## 3 MA                     8
-    ## 4 NC                     7
-    ## 5 NJ                     8
-    ## 6 PA                    10
+| locationabbr | n\_locations |
+|:-------------|-------------:|
+| CT           |            7 |
+| FL           |            7 |
+| MA           |            8 |
+| NC           |            7 |
+| NJ           |            8 |
+| PA           |           10 |
 
 ``` r
 brfss_clean %>% 
   filter(year == "2010") %>% 
   group_by(locationabbr) %>% 
   summarize(n_locations = n_distinct(locationdesc)) %>% 
-  filter(n_locations >= 7)
+  filter(n_locations >= 7) %>% 
+  knitr::kable()
 ```
 
-    ## # A tibble: 14 × 2
-    ##    locationabbr n_locations
-    ##    <chr>              <int>
-    ##  1 CA                    12
-    ##  2 CO                     7
-    ##  3 FL                    41
-    ##  4 MA                     9
-    ##  5 MD                    12
-    ##  6 NC                    12
-    ##  7 NE                    10
-    ##  8 NJ                    19
-    ##  9 NY                     9
-    ## 10 OH                     8
-    ## 11 PA                     7
-    ## 12 SC                     7
-    ## 13 TX                    16
-    ## 14 WA                    10
+| locationabbr | n\_locations |
+|:-------------|-------------:|
+| CA           |           12 |
+| CO           |            7 |
+| FL           |           41 |
+| MA           |            9 |
+| MD           |           12 |
+| NC           |           12 |
+| NE           |           10 |
+| NJ           |           19 |
+| NY           |            9 |
+| OH           |            8 |
+| PA           |            7 |
+| SC           |            7 |
+| TX           |           16 |
+| WA           |           10 |
 
-In 2002,
+In 2002, CT, FL, MA, NC, NJ, PA were observed at 7 or more locations. In
+2010, CA, CO, Fl, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, and WA were
+observed at 7 or more locations.
 
-and PA were observed at 7 or more locations, in 2010,
-
-Construct a dataset that is limited to Excellent responses, and
+**Construct a dataset that is limited to Excellent responses, and
 contains, year, state, and a variable that averages the data\_value
-across locations within a state. Make a “spaghetti” plot of this average
-value over time within a state (that is, make a plot showing a line for
-each state across years – the geom\_line geometry and group aesthetic
-will help). Make a two-panel plot showing, for the years 2006, and 2010,
+across locations within a state. **
+
+``` r
+brfss_01 <- 
+  brfss_clean %>% 
+  group_by(year, locationabbr) %>% 
+  filter(response == "Excellent") %>% 
+  summarize(avg_val = mean(data_value), na.rm = TRUE)
+```
+
+    ## `summarise()` has grouped output by 'year'. You can override using the `.groups` argument.
+
+**Make a “spaghetti” plot of this average value over time within a state
+(that is, make a plot showing a line for each state across years – the
+geom\_line geometry and group aesthetic will help).**
+
+``` r
+brfss_01 %>% 
+  ggplot(aes(x = year, y = avg_val, group=locationabbr, color = locationabbr)) +
+  geom_line()+
+  theme(legend.text = element_text(size = 4),
+        legend.title = element_text(size = 4),
+        legend.position = "right",
+        legend.box = "horizontal")
+```
+
+    ## Warning: Removed 3 row(s) containing missing values (geom_path).
+
+<img src="P8105_hw3_xw2757_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
+
+**Make a two-panel plot showing, for the years 2006, and 2010,
 distribution of data\_value for responses (“Poor” to “Excellent”) among
-locations in NY State.
+locations in NY State.**
+
+``` r
+data_response_NY_06_10 <- 
+   brfss_clean %>% 
+   filter(year %in% c("2006", "2010"), locationabbr == "NY") %>% 
+  group_by(locationdesc, response) %>% 
+  ggplot(aes(x = data_value, fill = response)) +
+  geom_histogram(position = "dodge", binwidth = 8) +
+  facet_grid(~year) +
+  labs(
+    title = "  Distribution of data_value for responses in NY"
+  )
+```
+
+\#\#Problem 3
+
+**Loading data**
+
+``` r
+accelerometer <- 
+  read_csv("accel_data.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(wknd = ifelse(day %in% c("Saturdat", "Sunday"), "Weekend", "Weekday")) %>% 
+  pivot_longer(activity_1:activity_1440, names_to = "minute", names_prefix = "activity_", values_to = "activity") %>% 
+  select(wknd, everything()) %>% 
+  mutate(minute = as.numeric(minute))
+```
+
+    ## Rows: 35 Columns: 1443
+
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr    (1): day
+    ## dbl (1442): week, day_id, activity.1, activity.2, activity.3, activity.4, ac...
+
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+**Describe the resulting dataset (e.g. what variables exist, how many
+observations, etc).** The resulting data set “activity” contains the
+following variables: wknd, week, day\_id, day, minute, activity, with a
+total of 50400 observation.
+
+**Using your tidied dataset, aggregate accross minutes to create a total
+activity variable for each day, and create a table showing these totals.
+Are any trends apparent?**
+
+``` r
+accelerometer %>% 
+  group_by(wknd, day_id) %>% 
+  summarize(total_activity_day = sum(activity)) %>% 
+  knitr::kable()
+```
+
+    ## `summarise()` has grouped output by 'wknd'. You can override using the `.groups` argument.
+
+| wknd    | day\_id | total\_activity\_day |
+|:--------|--------:|---------------------:|
+| Weekday |       1 |            480542.62 |
+| Weekday |       2 |             78828.07 |
+| Weekday |       3 |            376254.00 |
+| Weekday |       5 |            355923.64 |
+| Weekday |       6 |            307094.24 |
+| Weekday |       7 |            340115.01 |
+| Weekday |       8 |            568839.00 |
+| Weekday |       9 |            295431.00 |
+| Weekday |      10 |            607175.00 |
+| Weekday |      12 |            474048.00 |
+| Weekday |      13 |            423245.00 |
+| Weekday |      14 |            440962.00 |
+| Weekday |      15 |            467420.00 |
+| Weekday |      16 |            685910.00 |
+| Weekday |      17 |            382928.00 |
+| Weekday |      19 |            371230.00 |
+| Weekday |      20 |            381507.00 |
+| Weekday |      21 |            468869.00 |
+| Weekday |      22 |            154049.00 |
+| Weekday |      23 |            409450.00 |
+| Weekday |      24 |              1440.00 |
+| Weekday |      26 |            340291.00 |
+| Weekday |      27 |            319568.00 |
+| Weekday |      28 |            434460.00 |
+| Weekday |      29 |            620860.00 |
+| Weekday |      30 |            389080.00 |
+| Weekday |      31 |              1440.00 |
+| Weekday |      33 |            549658.00 |
+| Weekday |      34 |            367824.00 |
+| Weekday |      35 |            445366.00 |
+| Weekend |       4 |            631105.00 |
+| Weekend |      11 |            422018.00 |
+| Weekend |      18 |            467052.00 |
+| Weekend |      25 |            260617.00 |
+| Weekend |      32 |            138421.00 |
+
+``` r
+accelerometer %>% 
+  group_by(wknd, day_id) %>% 
+  summarize(total_activity_day = sum(activity)) %>% 
+  ggplot(aes(x = day_id, y = total_activity_day)) +
+  geom_line()
+```
+
+    ## `summarise()` has grouped output by 'wknd'. You can override using the `.groups` argument.
+
+<img src="P8105_hw3_xw2757_files/figure-gfm/unnamed-chunk-16-1.png" width="90%" />
+
+``` r
+accelerometer %>% 
+  group_by(wknd, day_id) %>% 
+  summarize(total_activity_day = sum(activity)) %>% 
+  ggplot(aes(x = day_id, y = total_activity_day, color = wknd)) +
+  geom_line()
+```
+
+    ## `summarise()` has grouped output by 'wknd'. You can override using the `.groups` argument.
+
+<img src="P8105_hw3_xw2757_files/figure-gfm/unnamed-chunk-16-2.png" width="90%" />
+^can’t find apparent trend of overall total day activity. Weekday total
+activity fluctuates but weekend total activity appears to resembles a
+downward trend.
+
+**Accelerometer data allows the inspection activity over the course of
+the day. Make a single-panel plot that shows the 24-hour activity time
+courses for each day and use color to indicate day of the week. Describe
+in words any patterns or conclusions you can make based on this graph.**
+
+``` r
+accelerometer %>% 
+  group_by(day, day_id) %>% 
+  ggplot(aes(x = minute, y = activity, group = day_id, color = day)) +
+  geom_line(alpha = 0.5)
+```
+
+<img src="P8105_hw3_xw2757_files/figure-gfm/unnamed-chunk-17-1.png" width="90%" />
+The plot shows that the subject is less active during nighttime, more
+activities during the day, and the most active time tends to be evening,
+and tends to be on Fridays.
